fix padding and gaps between elements of footer and header

--- a/src/statics/styles/Footer.css
+++ b/src/statics/styles/Footer.css
@@ -3,13 +3,9 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  gap: 12px;
   background-color: rgb(92 91 160);
-  padding: 0 3rem;
-  padding-top: 3rem;
-}
-
-.footer > div {
-  margin-bottom: 3rem;
+  padding: 5rem 3rem;
 }
 
 .footer__logo-social > img {
@@ -45,13 +41,14 @@
 }
 
 .footer__cta {
+  height: 99px;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: space-around;
 }
 
 .footer__cta p {
-  margin: 3rem 0;
   font-size: 1.6rem;
   font-weight: 700;
   line-height: 20px;
@@ -62,6 +59,7 @@
   .footer {
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
     padding-top: 2rem;
   }
 
@@ -73,10 +71,5 @@
   .footer__links div {
     margin-right: 4rem;
     align-items: flex-start;
-  }
-
-  .footer__cta {
-    align-items: flex-end;
-    margin-top: 2rem;
   }
 }
