--- a/src/statics/styles/Navigation.css
+++ b/src/statics/styles/Navigation.css
@@ -1,20 +1,20 @@
 nav {
-  padding: 8px 0;
   display: flex;
   flex-direction: column;
   align-items: center;
   border-bottom: 1px solid rgba(233, 233, 233, 0.8);
+  border-radius: 8px;
+  background-color: rgb(255, 255, 255);
+  border: 1px solid #bbb;
 }
 
 .nav-container {
   width: 100%;
-  height: 56px;
+  height: 65px;
   display: flex;
   flex-direction: column;
   align-items: center;
   position: sticky;
-  padding: 0 3rem;
-  padding-top: 6px;
   background-color: #fff;
   box-shadow: 0 0 18px rgba(0, 0, 0, 0.1);
   z-index: 20;
@@ -26,7 +26,7 @@ nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 9px 0;
+  padding: 0 2.2rem;
   z-index: 2;
 }
 
@@ -48,26 +48,20 @@ nav {
 }
 
 .nav__toggleable--show {
+  padding: 16px;
   display: flex;
+  gap: 12px;
   z-index: 2;
 }
 
-nav {
-  margin: 16px;
-  padding: 18px;
-  border-radius: 8px;
-  background-color: rgb(255, 255, 255);
-  border: 1px solid #bbb;
-}
-
 .nav__menu {
-  margin-top: 8px;
   display: flex;
   flex-direction: column;
+  gap: 10px;
 }
 
 .nav__menu > a {
-  height: 40px;
+  height: 25px;
   font-size: 1.8rem;
   font-weight: 400;
   color: hsl(233, 26%, 24%);
@@ -95,12 +89,11 @@ nav {
 
   .nav__toggleable {
     width: 70%;
-    margin: 0;
-    padding: 0;
+    height: 100%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    align-items: baseline;
+    align-items: center;
     position: relative;
     background-color: transparent;
     border: none;
@@ -109,11 +102,10 @@ nav {
   }
 
   .nav__menu {
+    height: 65px;
     flex-direction: row;
-  }
-
-  .nav__menu a {
-    margin-right: 3rem;
+    align-items: center;
+    gap: 3rem;
   }
 
   .nav__menu > a:hover {
